# weft

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
clients/weft_client/: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
clients/weft_client/integration_test/: canvas_input_test.dart
clients/weft_client/lib/: driver_main.dart  main.dart
clients/weft_client/lib/core/api/: client.dart  client.g.dart  ffi_dio_adapter.dart  mcp_api.dart  orchestration_api.dart  scene_api.dart  skills_api.dart  weft_claw_api.dart
clients/weft_client/lib/core/models/: app.dart  app.freezed.dart  app.g.dart  catalog.dart  chat.dart  chat.freezed.dart  chat_session_meta.dart  chat_session_meta.freezed.dart  chat_session_meta.g.dart  error.dart  orchestration.dart  package.dart  package.freezed.dart  package.g.dart  provider.dart  provider.freezed.dart  provider.g.dart  provider_presets.dart  service.dart  service.freezed.dart  service.g.dart
clients/weft_client/lib/core/providers/: catalog_service.dart  chat_provider.dart  connection_provider.dart  core_repository.dart  core_repository.g.dart  data_providers.dart  data_providers.g.dart  mcp_provider.dart  package_importer.dart  package_install_provider.dart  pinned_apps_provider.dart  preferences_provider.dart  scenes_provider.dart  selector_provider.dart  sessions_provider.dart  skills_provider.dart
clients/weft_client/lib/core/runtime/: core_process_manager.dart
clients/weft_client/lib/core/services/: chat_storage.dart
clients/weft_client/lib/core/transport/: ffi_adapter.dart  http_adapter.dart  transport_adapter.dart  transport_provider.dart
clients/weft_client/lib/features/ai_director/: ai_director_mock.dart  ai_director_timeline_painter.dart  ai_director_workbench_screen.dart
clients/weft_client/lib/features/apps/: app_detail_screen.dart  package_surface_screen.dart
clients/weft_client/lib/features/chat/: chat_screen.dart  session_sidebar.dart
clients/weft_client/lib/features/dashboard/: dashboard_screen.dart
clients/weft_client/lib/features/management/: management_screens.dart
clients/weft_client/lib/features/onboarding/: onboarding_view.dart
clients/weft_client/lib/features/orchestration/: orchestration_dag.dart  orchestration_provider.dart  orchestration_screen.dart  orchestration_view.dart
clients/weft_client/lib/features/providers_config/: providers_screen.dart
clients/weft_client/lib/features/services/: services_screen.dart
clients/weft_client/lib/features/settings/: selector_management_screen.dart  settings_screen.dart
clients/weft_client/lib/shared/theme/: app_theme.dart  router.dart  router.g.dart  spacing.dart
clients/weft_client/lib/shared/widgets/: app_error_widget.dart  app_shell.dart  command_palette.dart  empty_state.dart  glass_backdrop.dart  glass_card.dart  hover_card.dart  resizable_handle.dart  shortcuts_cheat_sheet.dart  skeleton.dart  sparkline.dart
clients/weft_client/linux/: CMakeLists.txt
clients/weft_client/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
clients/weft_client/linux/runner/: my_application.cc
clients/weft_client/macos/Flutter/: GeneratedPluginRegistrant.swift
clients/weft_client/macos/Runner.xcodeproj/: project.pbxproj
clients/weft_client/macos/Runner/Configs/: AppInfo.xcconfig
clients/weft_client/poc_web/: index.html
clients/weft_client/test/: canvas_shortcuts_test.dart
clients/weft_client/windows/: CMakeLists.txt
clients/weft_client/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
clients/weft_client/windows/runner/: Runner.rc  main.cpp
core/: .gitignore  Cargo.toml  README-signing.md  README.md  run-weft-core.ps1
core/src/: ffi.rs  frb_generated.rs  lib.rs  main.rs  runtime.rs  sdk.rs  types.rs  vkeys.rs
core/src/api/: app_detail.rs  apps.rs  capabilities.rs  core_capabilities.rs  generations.rs  health.rs  mod.rs  openai_compat.rs  package_webhook.rs  package_ws.rs  packages.rs  packages_runtime.rs  plans.rs  profile.rs  providers.rs  rpc.rs  scenes.rs  services.rs
core/src/app/: config.rs  core_capabilities.rs  generation.rs  identity.rs  mod.rs  packages.rs  policy.rs  registry.rs  resolve.rs  signing.rs  state.rs  store.rs
core/src/config/: mod.rs  store.rs
core/src/defaults/: error_handler.rs  key_selectors.rs  mod.rs  router.rs
core/src/defaults/transforms/: anthropic.rs  mod.rs  openai.rs
core/src/layers/: error_handler.rs  key_selector.rs  mod.rs  router.rs  transform.rs
core/src/package/: bridge.rs  circuit_breaker.rs  config.rs  fallback.rs  mod.rs  native.rs  permissions.rs  validate.rs
core/src/pipeline/: context.rs  mod.rs
core/src/process/: health.rs  mod.rs
core/src/rpc/: mod.rs
core/src/service_manager/: linux.rs  macos.rs  mod.rs  windows.rs
core/tests/: integration.rs
core/tests/fixtures/workspace-meta/: Cargo.toml
crates/weft-code-runtime/: Cargo.toml
crates/weft-code-runtime/src/: events.rs  lib.rs  main.rs  patch_target.rs  policy_service.rs  routes.rs  service.rs  session_service.rs  state.rs  task_service.rs  types.rs  workflow_gateway.rs
docs/: ARCHITECTURE.md  FEATURES.md  README.zh-CN.md
scripts/: build-wasm-packages.sh  precheck.ps1
(+36 files in other folders)
