[package]
name = "weft-code-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
